ingress-lb-gateway/ingress-with-lb/ingress.yml
# ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "my-static-ip" # Tên của IP tĩnh đã tạo
    networking.gke.io/managed-certificates: "my-managed-cert"
spec:
  rules:
  - host: example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: backend-service
            port:
              number: 8080
  tls:
  - hosts:
    - example.com
    secretName: my-ssl-cert-secret
